tests/sparql/test_suites/internal/ill-typed/good_queries/database/dateTime.rq
PREFIX : <http://www.path.com/>
SELECT ?o (STR(?o) AS ?str)
WHERE {
  ?s :dateTime ?o
}
ORDER BY ?s
